// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyses Summary Component renders all problems variant 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root w-full h-full css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardContent-root flex flex-col space-y-5 px-4 py-8 md:py-12 md:px-8 css-46bh2p-MuiCardContent-root"
  >
    <h1
      className="leading-6 text-h1 font-poppins font-bold md:text-5xl xl:text-7xl"
    >
      Ongoing Results
    </h1>
    <div
      className="flex flex-col md:flex-row space-y-5 md:space-y-0 md:items-center md:space-x-3 md:ml-1 md:pt-6 xl:pt-8"
    >
      <h4
        className="leading-6 text-h4 font-poppins font-semibold md:text-2xl xl:text-3xl"
      >
        7 Faults (143 Findings)
      </h4>
      <p
        className="leading-6 text-body1 font-nunito xl:text-xl font-semibold"
        style={
          {
            "color": "rgba(0, 0, 0, 0.6)",
          }
        }
      >
        10
         passed
      </p>
    </div>
    <ul
      className="max-h-40 max-w-full xl:max-w-6xl overflow-y-auto md:overflow-y-hidden space-y-1 md:space-y-0 flex flex-col md:flex-row justify-center md:justify-between pt-1 md:py-12 xl:py-24"
    >
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium mr-2 css-1wxstni-MuiSvgIcon-root"
          data-testid="CrisisAlertIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14.5 2.5c0 1.5-1.5 6-1.5 6h-2S9.5 4 9.5 2.5C9.5 1.12 10.62 0 12 0s2.5 1.12 2.5 2.5zM12 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm4.08-4.89c.18-.75.33-1.47.39-2.06C19.75 4.69 22 8.08 22 12c0 5.52-4.48 10-10 10S2 17.52 2 12c0-3.92 2.25-7.31 5.53-8.95.07.59.21 1.32.39 2.06C5.58 6.51 4 9.07 4 12c0 4.42 3.58 8 8 8s8-3.58 8-8c0-2.93-1.58-5.49-3.92-6.89zM18 12c0 3.31-2.69 6-6 6s-6-2.69-6-6c0-2 .98-3.77 2.48-4.86.23.81.65 2.07.65 2.07C8.43 9.93 8 10.92 8 12c0 2.21 1.79 4 4 4s4-1.79 4-4c0-1.08-.43-2.07-1.13-2.79 0 0 .41-1.22.65-2.07C17.02 8.23 18 10 18 12z"
          />
        </svg>
        5
         Critical
      </li>
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium mr-2 md:text-xl xl:text-3xl css-1wxstni-MuiSvgIcon-root"
          data-testid="ErrorIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        4
         High
      </li>
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium mr-2 md:text-xl xl:text-3xl css-3adcp6-MuiSvgIcon-root"
          data-testid="WarningIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
        3
         Medium
      </li>
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium mr-2 md:text-xl xl:text-3xl css-3adcp6-MuiSvgIcon-root"
          data-testid="ArrowDownwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
          />
        </svg>
        2
         Low
      </li>
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium mr-2 md:text-xl xl:text-3xl css-1yq1soz-MuiSvgIcon-root"
          data-testid="LightbulbIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 21c0 .5.4 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19C8.1 2 5 5.1 5 9c0 2.4 1.2 4.5 3 5.7V17c0 .5.4 1 1 1h6c.6 0 1-.5 1-1v-2.3c1.8-1.3 3-3.4 3-5.7 0-3.9-3.1-7-7-7z"
          />
        </svg>
        1
         None
      </li>
    </ul>
  </div>
</div>
`;

exports[`Analyses Summary Component renders no problems variant 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root w-full h-full css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardContent-root flex flex-col space-y-5 px-4 py-8 md:py-12 md:px-8 css-46bh2p-MuiCardContent-root"
  >
    <h1
      className="leading-6 text-h1 font-poppins font-bold md:text-5xl xl:text-7xl"
    >
      Ongoing Results
    </h1>
    <div
      className="flex flex-col md:flex-row space-y-5 md:space-y-0 md:items-center md:space-x-3 md:ml-1 md:pt-6 xl:pt-8"
    >
      <h4
        className="leading-6 text-h4 font-poppins font-semibold md:text-2xl xl:text-3xl"
      >
        No problems detected yet. Live scanning will continue in the background.
      </h4>
      <p
        className="leading-6 text-body1 font-nunito xl:text-xl font-semibold"
        style={
          {
            "color": "rgba(0, 0, 0, 0.6)",
          }
        }
      >
        17
         passed
      </p>
    </div>
    <ul
      className="max-h-40 max-w-full xl:max-w-6xl overflow-y-auto md:overflow-y-hidden space-y-1 md:space-y-0 flex flex-col md:flex-row justify-center md:justify-between pt-1 md:py-12 xl:py-24"
    />
  </div>
</div>
`;

exports[`Analyses Summary Component renders some problems variant 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root w-full h-full css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardContent-root flex flex-col space-y-5 px-4 py-8 md:py-12 md:px-8 css-46bh2p-MuiCardContent-root"
  >
    <h1
      className="leading-6 text-h1 font-poppins font-bold md:text-5xl xl:text-7xl"
    >
      Ongoing Results
    </h1>
    <div
      className="flex flex-col md:flex-row space-y-5 md:space-y-0 md:items-center md:space-x-3 md:ml-1 md:pt-6 xl:pt-8"
    >
      <h4
        className="leading-6 text-h4 font-poppins font-semibold md:text-2xl xl:text-3xl"
      >
        7 Faults (143 Findings)
      </h4>
      <p
        className="leading-6 text-body1 font-nunito xl:text-xl font-semibold"
        style={
          {
            "color": "rgba(0, 0, 0, 0.6)",
          }
        }
      >
        10
         passed
      </p>
    </div>
    <ul
      className="max-h-40 max-w-full xl:max-w-6xl overflow-y-auto md:overflow-y-hidden space-y-1 md:space-y-0 flex flex-col md:flex-row justify-center md:justify-between pt-1 md:py-12 xl:py-24"
    >
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium mr-2 css-1wxstni-MuiSvgIcon-root"
          data-testid="CrisisAlertIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14.5 2.5c0 1.5-1.5 6-1.5 6h-2S9.5 4 9.5 2.5C9.5 1.12 10.62 0 12 0s2.5 1.12 2.5 2.5zM12 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm4.08-4.89c.18-.75.33-1.47.39-2.06C19.75 4.69 22 8.08 22 12c0 5.52-4.48 10-10 10S2 17.52 2 12c0-3.92 2.25-7.31 5.53-8.95.07.59.21 1.32.39 2.06C5.58 6.51 4 9.07 4 12c0 4.42 3.58 8 8 8s8-3.58 8-8c0-2.93-1.58-5.49-3.92-6.89zM18 12c0 3.31-2.69 6-6 6s-6-2.69-6-6c0-2 .98-3.77 2.48-4.86.23.81.65 2.07.65 2.07C8.43 9.93 8 10.92 8 12c0 2.21 1.79 4 4 4s4-1.79 4-4c0-1.08-.43-2.07-1.13-2.79 0 0 .41-1.22.65-2.07C17.02 8.23 18 10 18 12z"
          />
        </svg>
        3
         Critical
      </li>
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium mr-2 md:text-xl xl:text-3xl css-3adcp6-MuiSvgIcon-root"
          data-testid="WarningIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
        2
         Medium
      </li>
      <li
        className="flex items-center text-lg md:text-2xl xl:text-4xl font-semibold"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium mr-2 md:text-xl xl:text-3xl css-3adcp6-MuiSvgIcon-root"
          data-testid="ArrowDownwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
          />
        </svg>
        2
         Low
      </li>
    </ul>
  </div>
</div>
`;

exports[`Analyses Summary Loading Component rednders correctly 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root animate-pulse css-bhp9pd-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardContent-root flex flex-col space-y-5 px-4 py-8 md:py-12 md:px-8 css-46bh2p-MuiCardContent-root"
  >
    <div
      className="bg-gray-200 rounded-full dark:bg-gray-500 h-12 w-60 md:h-16 md:w-[38%] xl:h-20 xl:w-[45%] xl:mb-6"
    />
    <div
      className="flex flex-col md:flex-row space-y-5 md:space-y-0 md:items-center md:space-x-3 md:ml-1"
    >
      <div
        className="bg-gray-200 rounded-full dark:bg-gray-500 h-6 w-48 xl:h-12 xl:w-80"
      />
      <div
        className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 w-20 md:ml-4 xl:h-8 xl:w-28"
      />
    </div>
    <div
      className="max-h-40 overflow-y-scroll space-y-2 md:space-y-0 flex flex-col md:flex-row justify-center md:justify-between md:py-16"
    >
      <div
        className="flex items-center space-x-2"
      >
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-4 xl:w-8"
        />
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-24"
        />
      </div>
      <div
        className="flex items-center space-x-2"
      >
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-4 xl:w-8"
        />
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-32"
        />
      </div>
      <div
        className="flex items-center space-x-2"
      >
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-4 xl:w-8"
        />
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-20"
        />
      </div>
      <div
        className="hidden md:flex items-center space-x-2"
      >
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-4 xl:w-8"
        />
        <div
          className="bg-gray-200 rounded-full dark:bg-gray-500 h-4 xl:h-8 w-24"
        />
      </div>
    </div>
  </div>
</div>
`;
